--- a/src/components/SkillsRadar.module.css
+++ b/src/components/SkillsRadar.module.css
@@ -62,7 +62,7 @@
     justify-content: center;
     transition: all var(--transition-normal);
     width: 100%;
-    max-width: 400px;
+    max-width: 360px;
 }
 
 .radarCard:hover {
